@@ -17,7 +17,3 @@ std::string x_www_form_urlencoded( const fostlib::json &j );
 fostlib::string url_to_fostlib_string(const fostlib::url &u);
 fostlib::url url_join(const fostlib::url &u, const fostlib::string &r);
 
-void ua_fost_authenticate(
-    fostlib::http::user_agent &ua, const fostlib::string &key, const fostlib::string &secret
-);
-std::string ua_response_body(fostlib::http::user_agent::response &);
